# HAN-GO

./: .gitignore  CLAUDE.md  HAN-GO_PRD_v0.3.md  HAN-GO_PRD_v1.0.md  README.md  devlog.txt  docker-compose.yml
.claude/skills/backend-test/: SKILL.md
.claude/skills/frontend-test/: SKILL.md
.claude/skills/migration/: SKILL.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/order-state/: SKILL.md
.claude/skills/prd-check/: SKILL.md
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7b3903b58e54_initial_schema.py
backend/app/core/: config.py  deps.py  order_code.py  security.py  types.py
backend/app/models/: __init__.py  audit.py  order.py  product.py  store.py  ticket.py  user.py
backend/app/routers/: admin.py  auth.py  orders.py  products.py  stores.py  tickets.py
backend/app/schemas/: auth.py  order.py  product.py  store.py  ticket.py
backend/tests/: conftest.py  test_health.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/components/: HomePage.test.tsx  OrdersPage.test.tsx  smoke.test.tsx
frontend/app/: globals.css  layout.tsx
frontend/app/(admin)/: layout.tsx
frontend/app/(store)/: layout.tsx
frontend/app/(user)/: layout.tsx  page.tsx
frontend/components/: MockProvider.tsx
frontend/components/hango/: BottomNav.tsx  MobileLayout.tsx  OrderCard.tsx  ProductCard.tsx  QRTicket.tsx  SeatGrid.tsx  (+3 more)
frontend/lib/: api.ts  auth.ts  cart.ts  types.ts
frontend/mocks/: handlers.ts
(+32 files in other folders)
