[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "nanoid>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=9.0.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
