[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "nanoid>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=9.0.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
